--- a/ISKBoard_20250602.ioc
+++ b/ISKBoard_20250602.ioc
@@ -20,21 +20,21 @@ Mcu.Name=STM32L431R(B-C)Tx
 Mcu.Package=LQFP64
 Mcu.Pin0=PH0-OSC_IN (PH0)
 Mcu.Pin1=PH1-OSC_OUT (PH1)
-Mcu.Pin10=PC10
-Mcu.Pin11=PC11
-Mcu.Pin12=PC12
+Mcu.Pin10=PC11
+Mcu.Pin11=PC12
+Mcu.Pin12=PB4 (NJTRST)
 Mcu.Pin13=PB5
 Mcu.Pin14=VP_SYS_VS_Systick
 Mcu.Pin15=VP_TIM2_VS_ClockSourceINT
 Mcu.Pin16=VP_TIM6_VS_ClockSourceINT
-Mcu.Pin2=PC3
-Mcu.Pin3=PA1
-Mcu.Pin4=PA9
-Mcu.Pin5=PA10
-Mcu.Pin6=PA11
-Mcu.Pin7=PA13 (JTMS-SWDIO)
-Mcu.Pin8=PA14 (JTCK-SWCLK)
-Mcu.Pin9=PA15 (JTDI)
+Mcu.Pin2=PA1
+Mcu.Pin3=PA9
+Mcu.Pin4=PA10
+Mcu.Pin5=PA11
+Mcu.Pin6=PA13 (JTMS-SWDIO)
+Mcu.Pin7=PA14 (JTCK-SWCLK)
+Mcu.Pin8=PA15 (JTDI)
+Mcu.Pin9=PC10
 Mcu.PinsNb=17
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
@@ -77,6 +77,11 @@ PA15\ (JTDI).PinState=GPIO_PIN_SET
 PA15\ (JTDI).Signal=GPIO_Output
 PA9.Mode=Asynchronous
 PA9.Signal=USART1_TX
+PB4\ (NJTRST).GPIOParameters=GPIO_PuPd,GPIO_Label
+PB4\ (NJTRST).GPIO_Label=PN5180_IRQ
+PB4\ (NJTRST).GPIO_PuPd=GPIO_PULLUP
+PB4\ (NJTRST).Locked=true
+PB4\ (NJTRST).Signal=GPIO_Input
 PB5.GPIOParameters=PinState,GPIO_PuPd,GPIO_Label
 PB5.GPIO_Label=PN5180_RST
 PB5.GPIO_PuPd=GPIO_NOPULL
@@ -98,10 +103,6 @@ PC12.GPIO_Label=PN5180_MOSI
 PC12.Locked=true
 PC12.Mode=Full_Duplex_Master
 PC12.Signal=SPI3_MOSI
-PC3.GPIOParameters=GPIO_Label
-PC3.GPIO_Label=PN5180_DWL
-PC3.Locked=true
-PC3.Signal=GPIO_Output
 PH0-OSC_IN\ (PH0).Mode=HSE-External-Oscillator
 PH0-OSC_IN\ (PH0).Signal=RCC_OSC_IN
 PH1-OSC_OUT\ (PH1).Locked=true
