--- a/ISKBoard_20250602.ioc
+++ b/ISKBoard_20250602.ioc
@@ -22,10 +22,11 @@ Mcu.Pin0=PH0-OSC_IN (PH0)
 Mcu.Pin1=PH1-OSC_OUT (PH1)
 Mcu.Pin10=PC11
 Mcu.Pin11=PC12
-Mcu.Pin12=PB5
-Mcu.Pin13=VP_SYS_VS_Systick
-Mcu.Pin14=VP_TIM2_VS_ClockSourceINT
-Mcu.Pin15=VP_TIM6_VS_ClockSourceINT
+Mcu.Pin12=PB4 (NJTRST)
+Mcu.Pin13=PB5
+Mcu.Pin14=VP_SYS_VS_Systick
+Mcu.Pin15=VP_TIM2_VS_ClockSourceINT
+Mcu.Pin16=VP_TIM6_VS_ClockSourceINT
 Mcu.Pin2=PA1
 Mcu.Pin3=PA9
 Mcu.Pin4=PA10
@@ -34,7 +35,7 @@ Mcu.Pin6=PA13 (JTMS-SWDIO)
 Mcu.Pin7=PA14 (JTCK-SWCLK)
 Mcu.Pin8=PA15 (JTDI)
 Mcu.Pin9=PC10
-Mcu.PinsNb=16
+Mcu.PinsNb=17
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32L431RCTx
@@ -76,6 +77,11 @@ PA15\ (JTDI).PinState=GPIO_PIN_SET
 PA15\ (JTDI).Signal=GPIO_Output
 PA9.Mode=Asynchronous
 PA9.Signal=USART1_TX
+PB4\ (NJTRST).GPIOParameters=GPIO_PuPd,GPIO_Label
+PB4\ (NJTRST).GPIO_Label=PN5180_IRQ
+PB4\ (NJTRST).GPIO_PuPd=GPIO_PULLUP
+PB4\ (NJTRST).Locked=true
+PB4\ (NJTRST).Signal=GPXTI4
 PB5.GPIOParameters=PinState,GPIO_PuPd,GPIO_Label
 PB5.GPIO_Label=PN5180_RST
 PB5.GPIO_PuPd=GPIO_NOPULL
@@ -183,6 +189,8 @@ RCC.USART3Freq_Value=80000000
 RCC.VCOInputFreq_Value=8000000
 RCC.VCOOutputFreq_Value=160000000
 RCC.VCOSAI1OutputFreq_Value=72000000
+SH.GPXTI4.0=GPIO_EXTI4
+SH.GPXTI4.ConfNb=1
 SH.S_TIM1_CH4.0=TIM1_CH4,PWM Generation4 CH4
 SH.S_TIM1_CH4.ConfNb=1
 SPI3.BaudRatePrescaler=SPI_BAUDRATEPRESCALER_16
