delete some debug printf, add some comments in discoveryloop logic func. save before test irq.This is a successful project to read card id

--- a/ISKBoard_20250602.ioc
+++ b/ISKBoard_20250602.ioc
@@ -56,7 +56,7 @@ NVIC.USART1_IRQn=true\:0\:0\:false\:false\:true\:true\:true\:true
 NVIC.UsageFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 PA1.GPIOParameters=GPIO_PuPd,GPIO_Label
 PA1.GPIO_Label=PN5180_BUSY
-PA1.GPIO_PuPd=GPIO_NOPULL
+PA1.GPIO_PuPd=GPIO_PULLUP
 PA1.Locked=true
 PA1.Signal=GPIO_Input
 PA10.Mode=Asynchronous
@@ -86,7 +86,7 @@ PB5.GPIOParameters=PinState,GPIO_PuPd,GPIO_Label
 PB5.GPIO_Label=PN5180_RST
 PB5.GPIO_PuPd=GPIO_NOPULL
 PB5.Locked=true
-PB5.PinState=GPIO_PIN_RESET
+PB5.PinState=GPIO_PIN_SET
 PB5.Signal=GPIO_Output
 PC10.GPIOParameters=GPIO_Label
 PC10.GPIO_Label=PN5180_SCK
