--- a/ISKBoard_20250602.ioc
+++ b/ISKBoard_20250602.ioc
@@ -43,6 +43,7 @@ MxCube.Version=6.14.0
 MxDb.Version=DB.6.0.140
 NVIC.BusFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 NVIC.DebugMonitor_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
+NVIC.EXTI4_IRQn=true\:5\:0\:true\:false\:true\:true\:true\:true
 NVIC.ForceEnableDMAVector=true
 NVIC.HardFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 NVIC.MemoryManagement_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
@@ -51,7 +52,7 @@ NVIC.PendSV_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 NVIC.PriorityGroup=NVIC_PRIORITYGROUP_4
 NVIC.SVCall_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 NVIC.SysTick_IRQn=true\:1\:0\:true\:false\:true\:false\:true\:false
-NVIC.TIM2_IRQn=true\:2\:0\:true\:false\:true\:true\:true\:true
+NVIC.TIM2_IRQn=true\:5\:0\:true\:false\:true\:true\:true\:true
 NVIC.USART1_IRQn=true\:0\:0\:false\:false\:true\:true\:true\:true
 NVIC.UsageFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 PA1.GPIOParameters=GPIO_PuPd,GPIO_Label
@@ -77,8 +78,9 @@ PA15\ (JTDI).PinState=GPIO_PIN_SET
 PA15\ (JTDI).Signal=GPIO_Output
 PA9.Mode=Asynchronous
 PA9.Signal=USART1_TX
-PB4\ (NJTRST).GPIOParameters=GPIO_PuPd,GPIO_Label
+PB4\ (NJTRST).GPIOParameters=GPIO_PuPd,GPIO_Label,GPIO_ModeDefaultEXTI
 PB4\ (NJTRST).GPIO_Label=PN5180_IRQ
+PB4\ (NJTRST).GPIO_ModeDefaultEXTI=GPIO_MODE_IT_FALLING
 PB4\ (NJTRST).GPIO_PuPd=GPIO_PULLUP
 PB4\ (NJTRST).Locked=true
 PB4\ (NJTRST).Signal=GPXTI4
@@ -197,8 +199,9 @@ SPI3.BaudRatePrescaler=SPI_BAUDRATEPRESCALER_16
 SPI3.CalculateBaudRate=5.0 MBits/s
 SPI3.DataSize=SPI_DATASIZE_8BIT
 SPI3.Direction=SPI_DIRECTION_2LINES
-SPI3.IPParameters=VirtualType,Mode,Direction,CalculateBaudRate,BaudRatePrescaler,DataSize
+SPI3.IPParameters=VirtualType,Mode,Direction,CalculateBaudRate,BaudRatePrescaler,DataSize,NSSPMode
 SPI3.Mode=SPI_MODE_MASTER
+SPI3.NSSPMode=SPI_NSS_PULSE_DISABLE
 SPI3.VirtualType=VM_MASTER
 TIM1.Channel-PWM\ Generation4\ CH4=TIM_CHANNEL_4
 TIM1.IPParameters=Channel-PWM Generation4 CH4,Prescaler,Period,Pulse-PWM Generation4 CH4
@@ -207,8 +210,8 @@ TIM1.Prescaler=80-1
 TIM1.Pulse-PWM\ Generation4\ CH4=185
 TIM2.AutoReloadPreload=TIM_AUTORELOAD_PRELOAD_ENABLE
 TIM2.IPParameters=Prescaler,Period,AutoReloadPreload
-TIM2.Period=4999
-TIM2.Prescaler=7999
+TIM2.Period=4294967295
+TIM2.Prescaler=79
 TIM6.IPParameters=Prescaler,Period
 TIM6.Period=1
 TIM6.Prescaler=79
